Lots of changes

--- a/src/index.css
+++ b/src/index.css
@@ -10,14 +10,12 @@
 }
 
 body {
-    background-color: var(--secondary);
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
         "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
         "Helvetica Neue", sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    height: 100%;
+    margin: 0;
+    background-color: var(--secondary);
 }
 
 code {
@@ -27,4 +25,14 @@ code {
 
 button {
     cursor: pointer;
+}
+
+hr {
+    width: 97%;
+    color: white;
+}
+
+#root,
+body {
+    height: 100%;
 }
