--- a/src/styles/Card.module.css
+++ b/src/styles/Card.module.css
@@ -21,6 +21,15 @@
     flex-direction: column;
 }
 
+.Overview {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: -webkit-box !important;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    white-space: normal;
+}
+
 .Title,
 .Average {
     margin: 0;
