--- a/src/styles/Actor.module.css
+++ b/src/styles/Actor.module.css
@@ -3,6 +3,10 @@
     flex-direction: column;
     padding: 15px;
     color: white;
+    padding-top: 80px;
+}
+.Name {
+    margin-top: 10px;
 }
 
 .Images {
