--- a/src/styles/TopBar.module.css
+++ b/src/styles/TopBar.module.css
@@ -1,21 +1,13 @@
 .Container {
     display: flex;
     width: 100%;
-    flex-direction: column;
-    align-items: center;
-}
-
-.Search {
-    padding: 0.5em;
-    border: 2px solid white;
+    justify-content: space-between;
+    padding: 10px 20px;
+    background-color: transparent;
+    position: absolute;
     color: white;
-    font: inherit;
-    width: 20em;
-    height: 3em;
-    border-radius: 10px;
-    background-color: var(--secondary);
 }
 
-.Title {
+.Container h1 {
     color: white;
 }
