--- a/src/styles/TopBar.module.css
+++ b/src/styles/TopBar.module.css
@@ -5,11 +5,30 @@
 .Container {
     display: grid;
     width: 100%;
-    grid-template-columns: repeat(var(--cols, 2), 1fr);
-    padding: 0 30px;
-    align-items: center;
-    background: linear-gradient(to bottom, #00000090, #00000000);
+    grid-template-columns: 1fr;
+    padding: 10px 30px;
+    gap: 10px;
+    background: linear-gradient(to bottom, #00000090, #00000010);
     color: white;
+}
+
+.Container h1 {
+    margin: 0;
+}
+
+@media (min-width: 1000px) {
+    .Container {
+        grid-template-columns: repeat(var(--cols, 2), 1fr);
+    }
+
+    .Ratings {
+        justify-self: end;
+    }
+
+    .Search {
+        justify-self: center;
+        width: 20em;
+    }
 }
 
 .Container.Absolute {
@@ -30,13 +49,9 @@
     border: 2px solid white;
     color: white;
     font: inherit;
-    justify-self: center;
-    width: 20em;
+    width: 100%;
     height: 3em;
+    margin-top: 10px;
     border-radius: 10px;
     background-color: var(--secondary);
-}
-
-.Ratings {
-    justify-self: end;
 }
