--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
     --primary: #14bbaa;
     --secondary: #2c3c4c;
+    scroll-behavior: smooth;
 }
 
 *,
@@ -14,6 +15,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
         "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
         "Helvetica Neue", sans-serif;
+
     margin: 0;
     background-color: var(--secondary);
 }
