--- a/src/styles/Actor.module.css
+++ b/src/styles/Actor.module.css
@@ -8,6 +8,7 @@
 .Top {
     display: flex;
     gap: 20px;
+    margin-bottom: 30px;
 }
 
 .Thumb {
@@ -45,6 +46,14 @@
     gap: 10px;
 }
 
+.MovieTitle {
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .Collapsed {
     -webkit-line-clamp: 5;
 }
@@ -80,4 +89,8 @@
 
 .Movie img {
     height: 300px;
+}
+
+.Section h1 {
+    margin-top: 0;
 }
