--- a/src/styles/Actor.module.css
+++ b/src/styles/Actor.module.css
@@ -1,96 +1,96 @@
 .Container {
-    display: flex;
-    flex-direction: column;
-    padding: 15px;
-    color: white;
+	display: flex;
+	flex-direction: column;
+	padding: 15px;
+	color: white;
 }
 
 .Top {
-    display: flex;
-    gap: 20px;
-    margin-bottom: 30px;
+	display: flex;
+	gap: 20px;
+	margin-bottom: 30px;
 }
 
 .Thumb {
-    height: 450px;
+	height: 450px;
 }
 
 .Name {
-    margin-top: 10px;
-    font-size: 3em;
+	margin-top: 10px;
+	font-size: 3em;
 }
 
 .Biography {
-    -webkit-box-orient: vertical;
-    font-size: 1.3em;
-    white-space: pre-line;
-    display: -webkit-box;
-    overflow: hidden;
+	-webkit-box-orient: vertical;
+	font-size: 1.3em;
+	white-space: pre-line;
+	display: -webkit-box;
+	overflow: hidden;
 }
 
 .Images {
-    display: flex;
-    overflow: scroll;
-    align-items: start;
-    gap: 15px;
-    height: 200px;
+	display: flex;
+	overflow: auto;
+	align-items: start;
+	gap: 15px;
+	height: 200px;
 }
 
 .Image {
-    height: 100%;
+	height: 100%;
 }
 
 .Right {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
 }
 
 .MovieTitle {
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-    display: -webkit-box;
-    overflow: hidden;
-    text-overflow: ellipsis;
+	-webkit-box-orient: vertical;
+	-webkit-line-clamp: 2;
+	display: -webkit-box;
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
 
 .Collapsed {
-    -webkit-line-clamp: 5;
+	-webkit-line-clamp: 5;
 }
 
 .Collapse {
-    color: white;
-    text-decoration: none;
+	color: white;
+	text-decoration: none;
 }
 
 .Credits {
-    display: flex;
-    width: 100%;
-    gap: 20px;
-    overflow: scroll;
+	display: flex;
+	width: 100%;
+	gap: 20px;
+	overflow: auto;
 }
 
 .ReadMore {
-    text-decoration: underline;
+	text-decoration: underline;
 }
 
 .Movie {
-    display: flex;
-    flex-direction: column;
-    text-decoration: none;
-    color: white;
-    align-items: center;
-    gap: 5px;
+	display: flex;
+	flex-direction: column;
+	text-decoration: none;
+	color: white;
+	align-items: center;
+	gap: 5px;
 }
 
 .Movie:hover {
-    text-decoration: underline;
+	text-decoration: underline;
 }
 
 .Movie img {
-    height: 300px;
+	height: 300px;
 }
 
 .Section h1 {
-    margin-top: 0;
+	margin-top: 0;
 }
